# jgs_mdp

./: Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.dlt/: secrets.toml
.github/workflows/: main.yml
.tmp_dagster_home_x66dh6qp/history/: runs.db
.tmp_dagster_home_x66dh6qp/history/runs/: index.db
.tmp_dagster_home_x66dh6qp/schedules/: schedules.db
Makefile-Action/: Makefile  data_analysis.py  data_processing.py  main_gha.yml
Makefile-Action/processed_data/: WHR2023_cleaned.csv
load_sos/: assets.py  definitions.py  sos_pipeline.py
load_sos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
